--- a/src/shows/index.njk
+++ b/src/shows/index.njk
@@ -156,7 +156,7 @@
          </tr>
          {% endif %}
          {% endfor %}
-         <script src="scripts/shows-filter.js"></script>
+         <script src="../scripts/shows-filter.js"></script>
       </tbody>
    </table>
    <!-- Modal for image preview -->
@@ -168,7 +168,7 @@
          <iframe id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></iframe>
       </div>
    </div>
-   <script src="scripts/shows-table.js"></script>
+   <script src="../scripts/shows-table.js"></script>
 </div>
 <p id="show-count" style="font-size: 14px;">Shows: {{ publicShows | length }}</p>
 {% endblock %}
