--- a/src/updates.njk
+++ b/src/updates.njk
@@ -141,6 +141,6 @@
          <iframe id="modalImage" style="width:100%; height:100%; border:none; border-radius:0px;"></iframe>
       </div>
    </div>
-   <script src="scripts/shows-table.js"></script>
+   <script src="../scripts/shows-table.js"></script>
 </div>
 {% endblock %}
