--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -229,3 +229,85 @@ h1, h2, h3 {
 .extra-media.visible {
   display: block;
 }
+
+.setlist-inner {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+.setlist-inner th,
+.setlist-inner td {
+  border: 1px solid #ccc;
+  padding: 4px 8px;
+  text-align: left;
+}
+
+.setlist-title {
+  text-align: center;
+  background-color: #e9f2fb;
+  font-weight: bold;
+}
+
+#imageModal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+  align-items: center;
+  justify-content: center;
+}
+
+#imageModal .modal-inner {
+  position: relative;
+  width: 90%;
+  height: 90%;
+}
+
+#imageModal .close {
+  position: absolute;
+  top: 11px;
+  right: 60px;
+  font-size: 2rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 1px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#modalPrev,
+#modalNext {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  cursor: pointer;
+}
+
+#modalPrev {
+  left: 10px;
+}
+
+#modalNext {
+  right: 10px;
+}
+
+#modalImage {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 2;
+}
+
+img.clickable-thumb {
+  cursor: pointer;
+}
