--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,6 +3,7 @@
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/tradelist/styles/global.css">
+	<link rel="stylesheet" href="/tradelist/styles/show.css">
     <meta charset="UTF-8">
     <title>{% block title %}Untitled{% endblock %}</title>
 </head>
